Calling exit instead of qFatal when instance==0

If new image finder is running on background and e.g. main window is
closed the instance is destroyed while new image finder is still
running. In this case we just quit.

BUG: 284667